# Robot_trajectory_tracking

./: CMakeLists.txt  README.md
include/: Connection.h  Robot.h  Trajectory.h
src/: Robot.cpp  connection.cpp  main.cpp
